objects/Customer_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Feedback_Date__c</fullName>
        <label>Feedback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Feedbacks</pluralLabel>
    <recordTypes>
        <fullName>Sample</fullName>
        <active>true</active>
        <label>Sample</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Email_field_should_not_be_blank</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Email__c )</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Pleas enter your Email address..</errorMessage>
    </validationRules>
</CustomObject>